[gd_scene format=3 uid="uid://main_menu"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0588235, 0.117647, 0.188235, 1.0)

[node name="Header" type="Label" parent="."]
anchor_left = 0.0
anchor_right = 1.0
anchor_top = 0.08
anchor_bottom = 0.14
text = "Main Menu"
horizontal_alignment = HorizontalAlignment.CENTER
add_theme_color_override("font_color", Color(0.870588, 0.94902, 1, 1))

[node name="ButtonContainer" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_right = 0.8
anchor_top = 0.2
anchor_bottom = 0.8
theme_override_constants/separation = 18

[node name="StartButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
text = "Start Score Run"

[node name="TutorialButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
text = "Tutorial"

[node name="PracticeButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
text = "Practice"

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
text = "Options"

[node name="RecordsButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
text = "Records"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
unique_name_in_owner = true
text = "Quit"
